force-app/main/default/objects/Project__c/fields/Application_date__c.field-meta.xml
<CustomField>
    <fullName>Application_date__c</fullName>
    <formula>Student__r.Admission_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application date</label>
    <type>Date</type>
</CustomField>