force-app/main/default/objects/Project__c/fields/Project_Group__c.field-meta.xml
<CustomField>
    <fullName>Project_Group__c</fullName>
    <label>Project Group</label>
    <referenceTo>Project_Group__c</referenceTo>
    <relationshipLabel>Project_Group</relationshipLabel>
    <relationshipName>Project_Group</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>